test/src/e2e_vm_tests/test_programs/should_fail/language/reexport/aliases/src/items_5.sw
library;

pub trait Items5Trait<T> {
    fn items_5_trait_function(self, x: T) -> bool;
}
